<resources>
    <string name="app_name">MBCCS</string>
    <string name="ok">ok</string>
    <string name="OK">OK</string>
    <string name="cancel">Hủy</string>
    <string name="permission_guide">Please go to System Settings and turn on permissions in order to use the app.</string>
    <string name="serial_step1">1. Chọn dải serial</string>
    <string name="or">Hoặc</string>
    <string name="common_label_close">Đóng</string>
    <string name="common_format_money">%s đ</string>
    <string name="complete">Hoàn thành</string>
    <string name="common_label_select_serials">Chọn serials</string>
    <string name="common_label_select_serials_step2">2. Sửa dải serial đã chọn ở b1</string>
    <string name="common_label_select_serials_step3">3. Xác nhận các serial đã chọn</string>
    <string name="input_empty">Hãy nhập thông tin</string>
    <string name="not_phone">Số điện thoai không hợp lệ</string>
    <string name="common_label_add">Thêm</string>
    <string name="common_label_reject">Từ chối</string>
    <string name="common_label_export">Xuất kho</string>
    <string name="common_label_import">Nhập kho</string>
    <string name="common_label_total_money">Tổng tiền</string>
    <string name="common_label_tax">Tiền thuế</string>
    <string name="common_label_total_amount">Số tiền phải thanh toán</string>
    <string name="common_label_continue">Tiếp tục</string>
    <string name="common_label_complete">Hoàn thành</string>
    <string name="common_msg_no_data">Không có dữ liệu</string>
    <string name="common_label_dot"> • </string>
    <string name="common_label_yes">Có</string>
    <string name="common_label_no">Không</string>
    <string name="error_load_data">Error load data</string>
    <string name="no_data">Không có dữ liệu</string>
    <string formatted="false" name="count_serial_selected">
        <![CDATA[
Bạn đã nhập <font color="#000000"><b> %d/%d</b></font> serial cho mặt hàng <font color="#000000"><b> %s</b></font>
        ]]>
    </string>
    <string name="invalid_serial">Serials không hợp lệ!</string>
    <string name="not_enought_serial">Hết serial!</string>
    <string name="full_serial">Đã chọn đủ số serial</string>
    <string name="total_serial">Tổng số: </string>
    <string name="confirm_goods">Xác nhận mặt hàng bán</string>
    <string name="confirm">Xác nhận</string>
    <string name="menu_dashboard">Dashboard</string>
    <string name="menu_task">Công việc</string>
    <string name="menu_sale">Bán hàng</string>
    <string name="menu_customer">Khách hàng</string>
    <string name="menu_more">more</string>
    <string name="percent">%1$.2f%%</string>
    <string name="doi_soat_cong_no">Đối soát công nợ</string>
    <string name="total">Tổng số:</string>
    <string name="remain">Còn phải thu:</string>
    <string name="title_reset_password">Quên mật khẩu</string>
    <string name="title_input_password">Đặt lại mật khẩu</string>
    <string name="description_reset_password">Chúng tôi sẽ gửi mã xác nhận đổi mật khẩu tới số điện thoại: </string>
    <string name="get_code">Lấy mã xác nhận</string>
    <string name="we_sent_code">Đã gửi mã xác nhận đổi mật khẩu tới \n số điện thoại <b>%s</b></string>
    <string name="code_verify">Mã xác nhận</string>
    <string name="new_password">Mật khẩu mới</string>
    <string name="not_receive_code">Chưa nhận được mã xác nhận? </string>
    <string name="resend_code"><u>Gửi lại</u></string>
    <string name="set_pass_again">Đặt lại mật khẩu</string>
    <string name="input_type_text">text</string>
    <string name="input_type_pass">textPassword</string>
    <string name="no_network_connection">Không có kết nối mạng</string>
    <string name="sell_orders_title">Bán theo đơn</string>
    <string name="sell_orders_list_orders">Danh sách đơn hàng (%1$d)</string>
    <string name="sell_orders_title_approvals">Đã phê duyệt (%1$d)</string>
    <string name="sell_orders_title_pending">Chờ phê duyệt (%1$d)</string>
    <string name="sell_orders_title_reject">Đã từ chối (%1$d)</string>
    <string name="sell_orders_date_orders">Ngày đặt hàng</string>
    <string name="sell_orders_time_range">Khoảng thời gian (tối đa 1 tháng)</string>
    <string name="sell_orders_unit">Đơn vị</string>
    <string name="sell_orders_user_manager">Nhân viên quản lý</string>
    <string name="sell_orders_user_manager_hint">"Nguyễn Văn A</string>
    <string name="sell_orders_change">Kênh</string>
    <string name="sell_orders_search">Tìm kiếm</string>
    <string name="sell_orders_gone_search">Đơn vị: %1$s - Nhân viên: %2$s - Kênh: %3$s</string>
    <string name="sell_orders_no_data_channel">Không có dữ liệu về kênh</string>
    <string name="order_detail_title">Chi tiết đơn hàng %1$s</string>
    <string name="order_detail_total_money">Tổng tiền: </string>
    <string name="order_detail_pay_money">Số tiền phải thanh toán: </string>
    <string name="order_detail_discount_money">Chiết khấu: </string>
    <string name="order_detail_tax_percent">Thuế suất: </string>
    <string name="order_detail_tax_money">Tiền thuế: </string>
    <string name="order_detail_money">%1$s đ</string>
    <string name="order_detail_cancel">Hủy Giao Dịch</string>
    <string name="order_detail_ok_1">Lên Giao Dịch</string>
    <string name="order_detail_ok">Bán hàng</string>
    <string name="item_order_detail_price_item">%1$s đ</string>
    <string name="item_orders_id">Mã đơn hàng: %1$s</string>
    <string name="item_orders_date">Đặt ngày: %1$s</string>
    <string name="item_orders_change_code_name">%1$s - %2$s</string>
    <string name="confirm_transaction_cancel_title">Xác nhận hủy giao dịch</string>
    <string name="confirm_transaction_sell_title">Xác nhận bán hàng</string>
    <string name="confirm_transaction_btn_cancel">Hủy</string>
    <string name="confirm_transaction_btn_sell">Bán</string>
    <string name="service">Dịch vụ</string>
    <string name="sell_program">Chương trình bán hàng</string>
    <string name="stock_list">Danh sách mặt hàng</string>
    <string name="price">%s VNĐ</string>
    <string name="remain_goods"><![CDATA[
<b>%s</b> sản phẩm
    ]]></string>
    <string name="serial_count">
                Đã chọn %d serial
                </string>
    <string name="select_serial">Chọn serial</string>
    <string name="next">Tiếp tục</string>
    <string name="sale_retail">Bán lẻ</string>
    <string name="sale_channel">Bán cho kênh</string>
    <string name="all">Tất cả</string>
    <string name="all_">-Tất cả-</string>
    <string name="customer_info">Thông tin khách hàng</string>
    <string name="customer_name"><![CDATA[<font color="#707070">Tên khách hàng/Công ty</font> <font color="#DF0101">*</font>]]></string>
    <string name="customer_identity"><![CDATA[
<font color="#707070">Chứng minh thư</font>
    ]]></string>
    <string name="address"><![CDATA[<font color="#707070">Địa chỉ</font> <font color="#DF0101">*</font>]]></string>
    <string name="back">Quay lại</string>
    <string name="payment">Thanh toán</string>
    <string name="common_label_caculate_amount">Tính tiền</string>
    <string name="sale_success">Bán hàng thành công</string>
    <string name="sale_success_content">Tin nhắn thông báo đã gửi đến SĐT của khách hàng và người bán</string>
    <string name="activity_login_ten_dang_nhap">Tên đăng nhập</string>
    <string name="activity_login_mat_khau">Mật khẩu</string>
    <string name="login">Đăng nhập</string>
    <string name="forgot_password">Quên mật khẩu?</string>
    <string name="phone_number_cannot_be_empty">Số điện thoại không thể bỏ trống.</string>
    <string name="password_cannot_be_empty">Mật khẩu không thể bỏ trống.</string>
    <string name="login_presenter_customer_service">Tổng đài chăm sóc khách hàng\n%1$s</string>
    <string name="sale_retail_lable_remain_warehouse">Kho còn</string>
    <string name="sale_label_payment_method">Hình thức thanh toán</string>
    <string name="sale_label_input_coupon">Nhập mã coupon</string>
    <string name="menu_help">Trợ giúp</string>
    <string name="menu_settings">Cấu hình</string>
    <string name="config_title">Cấu hình</string>
    <string name="config_select_language">Chọn ngôn ngữ</string>
    <string name="config_select_country">Chọn quốc gia</string>
    <string name="config_select_current_language">Tiếng bản địa</string>
    <string name="config_name_country">
        <![CDATA[
        Quốc gia: <b>%1$s</b>
        ]]>
    </string>
    <string name="config_select_font">Chọn font ứng dụng</string>
    <string name="config_notification">Thông báo</string>
    <string name="config_change_language">Chuyển ngôn ngữ</string>
    <string name="config_display_dashboard">Display Dashboard</string>
    <string name="config_sync_bccs">Đồng bộ BCCS</string>
    <string name="config_time_sync_bccs">Thời gian đồng bộ</string>
    <string name="config_logout">Đăng xuất</string>
    <string name="config_spinner_on">Bật</string>
    <string name="config_spinner_off">Tắt</string>
    <string name="billing_title">Lập hóa đơn</string>
    <string name="billing_info">Thông báo</string>
    <string name="title_search">Tìm kiếm</string>
    <string name="title_confirm">Xác Nhận</string>
    <string name="msg_title_confirm_trans">Bạn đã lập hóa đơn cho các giao dịch sau:</string>
    <string formatted="false" name="msg_before_tax">Trước thuế: %f</string>
    <string formatted="false" name="msg_rent">Tiền thuế: %f</string>
    <string formatted="false" name="msg_discount">Chiết khấu: %f</string>
    <string formatted="false" name="msg_total_amount_payable">Tổng tiền phải trả: %f</string>
    <string name="msg_choose_transaction">Chọn giao dịch</string>
    <string name="msg_list_trans">Danh sách giao dịch (%d)</string>
    <string name="title_channel">Kênh</string>
    <string name="msg_default_choose_time_trans">Khoảng thời gian (tối đa 1 tháng)</string>
    <string name="msg_date_create_trans">Ngày tạo giao dịch *</string>
    <string name="mode_code1">Mã hàng</string>
    <string name="quantity">Số lượng</string>
    <string name="sum_money">Tổng tiền</string>
    <string name="help_quan_ly_ban_hang">1. Làm thế nào để có thể quản lý bán hàng?</string>
    <string name="help_dau_noi_thue_bao_moi">2. Làm thế nào để có thể đấu nối cho thuê bao mới?</string>
    <string name="help_khach_hang_yeu_cau_bao_hanh">3. Làm thế nào khi có khách hàng yêu cầu bảo hành?</string>
    <string name="help_chinh_sach_moi">4. Làm thế nào khi có chính sách mới?</string>
    <string name="help_cong_viec_duoc_giao">5. Làm thế nào khi có công việc được giao?</string>
    <string name="help_theo_doi_kpi_ban_hang">6. Làm thế nào để theo dõi KPI bán hàng?</string>
    <string name="title_phone_number">Số thuê bao/ account</string>
    <string name="title_type_page">Loại giấy tờ</string>
    <string name="title_total_page">Số giấy tờ</string>
    <string name="title_info_customer"><u>Thông tin khách hàng</u></string>
    <string name="title_change_add_city">Tỉnh/TP</string>
    <string name="title_change_add_district">Quận/Huyện</string>
    <string name="title_change_add_commune">Phường/xã</string>
    <string name="title_survey_teams">Tổ đội</string>
    <string name="title_survey_bts_station">Trạm BTS</string>
    <string name="title_survey_port">Port</string>
    <string name="title_select_station">Chọn trạm</string>
    <string name="title_facility_choose_change">Chọn lý do thay đổi</string>
    <string name="title_facility_kind_of_item">Loại mặt hàng</string>
    <string name="title_facility_items">Mặt hàng</string>
    <string name="title_facility_cable">Dây cáp OT04 (m)</string>
    <string name="title_facility_converter">Converter (cái)</string>
    <string name="title_province">Tỉnh</string>
    <string name="title_district">Huyện</string>
    <string name="title_tab_province"> Tỉnh/Huyện</string>
    <string name="title_tab_ttkd">TTKD</string>
    <string name="title_tab_bts">BTS</string>
    <string name="title_tab_clh">Chợ/Lễ hội</string>
</resources>