<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <com.viettel.mbccs.widget.ToolBarView
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:tbIconLeft="@drawable/ic_arrow_back_black_24dp" />

    <LinearLayout
        android:id="@+id/layout_bottom"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal">

        <com.viettel.mbccs.widget.ItemViewArea
            android:id="@+id/iva_provincial"
            style="@style/AreaItem"
            app:ivaTitle="@string/title_tab_province" />

        <com.viettel.mbccs.widget.ItemViewArea
            android:id="@+id/iva_ttkd"
            style="@style/AreaItem"
            app:ivaTitle="@string/title_tab_ttkd" />

        <com.viettel.mbccs.widget.ItemViewArea
            android:id="@+id/iva_bts"
            style="@style/AreaItem"
            app:ivaTitle="@string/title_tab_bts" />

        <com.viettel.mbccs.widget.ItemViewArea
            android:id="@+id/iva_clh"
            style="@style/AreaItem"
            app:ivaTitle="@string/title_tab_clh" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/address"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/toolbar"
        android:background="@color/white"
        android:orientation="horizontal">

        <com.viettel.mbccs.widget.ItemSpinText
            android:id="@+id/the_provincial"
            style="@style/ItemSpinArea"
            app:istSpinner="true"
            app:istSpinnerTitle="@string/title_province" />

        <com.viettel.mbccs.widget.ItemSpinText
            android:id="@+id/the_district"
            style="@style/ItemSpinArea"
            app:istSpinner="true"
            app:istSpinnerTitle="@string/title_district" />
    </LinearLayout>

    <com.viettel.mbccs.widget.SearchViewCustom
        android:id="@+id/search_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/address"
        android:layout_margin="@dimen/dp_2"
        app:svcIconClear="true"
        app:svcOther="false" />

    <FrameLayout
        android:id="@+id/layout_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/layout_bottom"
        android:layout_below="@+id/search_view" />

</RelativeLayout>