<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <com.viettel.mbccs.widget.ItemSpinText
        style="@style/ItemSpinText"
        app:istIconLeft="true"
        app:istIconLeftBg="@drawable/ic_add_24dp"
        app:istIconRight="true"
        app:istIconRightBg="@drawable/ic_add_24dp"
        app:istTextView="true"
        app:istTextViewTitle="@string/title_phone_number" />

    <com.viettel.mbccs.widget.ItemSpinText
        style="@style/ItemSpinText"
        app:istIconLeft="true"
        app:istIconLeftBg="@drawable/ic_add_24dp"
        app:istIconRight="true"
        app:istIconRightBg="@drawable/ic_add_24dp"
        app:istTextView="true"
        app:istTextViewTitle="@string/title_type_page" />

    <com.viettel.mbccs.widget.ItemSpinText
        style="@style/ItemSpinText"
        app:istIconLeft="true"
        app:istIconLeftBg="@drawable/ic_add_24dp"
        app:istIconRight="true"
        app:istIconRightBg="@drawable/ic_add_24dp"
        app:istTextView="true"
        app:istTextViewTitle="@string/title_total_page" />

    <com.viettel.mbccs.widget.ButtonIconView
        android:id="@+id/bt_search"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/view_header"
        android:layout_gravity="center"
        android:layout_margin="@dimen/dp_5"
        android:gravity="center"
        app:itb_bg="@color/blue"
        app:itb_bg_pressed="@color/blue_trans"
        app:itb_padding_left="@dimen/dp_50"
        app:itb_padding_right="@dimen/dp_50"
        app:itb_radius="3dp"
        app:itb_text="@string/title_search" />

    <LinearLayout
        android:id="@+id/lyContentSearch"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:orientation="vertical">

        <com.viettel.mbccs.widget.CustomTextView
            android:id="@+id/tv_list_trans"
            style="@style/ItemBilling"
            android:text="@string/title_info_customer"
            android:textSize="@dimen/sp_17"
            android:textStyle="bold" />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/list"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/dp_10" />

    </LinearLayout>

</LinearLayout>