<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <com.viettel.mbccs.widget.ItemSpinText
        style="@style/ItemSpinText"
        app:istIconLeft="true"
        app:istIconLeftBg="@drawable/ic_add_black_24dp"
        app:istIconRight="true"
        app:istIconRightBg="@drawable/ic_add_black_24dp"
        app:istTextView="true"
        app:istTextViewTitle="@string/title_change_add_city" />

    <com.viettel.mbccs.widget.ItemSpinText
        style="@style/ItemSpinText"
        app:istIconLeft="true"
        app:istIconLeftBg="@drawable/ic_add_black_24dp"
        app:istIconRight="true"
        app:istIconRightBg="@drawable/ic_add_black_24dp"
        app:istTextView="true"
        app:istTextViewTitle="@string/title_change_add_district" />

    <com.viettel.mbccs.widget.ItemSpinText
        style="@style/ItemSpinText"
        app:istIconLeft="true"
        app:istIconLeftBg="@drawable/ic_add_black_24dp"
        app:istIconRight="true"
        app:istIconRightBg="@drawable/ic_add_black_24dp"
        app:istTextView="true"
        app:istTextViewTitle="@string/title_change_add_commune" />


</LinearLayout>