<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/white"
    android:orientation="vertical">
    <LinearLayout
        android:id="@+id/lyHeader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="vertical">

        <com.viettel.mbccs.widget.CustomTextView
            style="@style/ItemBilling"
            android:text="@string/msg_date_create_trans"
            android:textSize="@dimen/sp_12" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1">

            <com.viettel.mbccs.widget.CustomDatePicker
                android:id="@+id/dp_from_date"
                android:layout_weight="0.5"
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <com.viettel.mbccs.widget.CustomDatePicker
                android:id="@+id/dp_to_date"
                android:layout_weight="0.5"
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <com.viettel.mbccs.widget.CustomTextView
            style="@style/ItemBilling"
            android:text="@string/msg_default_choose_time_trans"
            android:textSize="@dimen/sp_14" />

        <com.viettel.mbccs.widget.CustomTextView
            style="@style/ItemBilling"
            android:text="@string/title_channel"
            android:textSize="@dimen/sp_14" />

        <Spinner
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <com.viettel.mbccs.widget.CustomTextView
            style="@style/ItemBilling"
            android:text="@string/msg_choose_transaction"
            android:textSize="@dimen/sp_14" />

        <Spinner
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />


        <com.viettel.mbccs.widget.ButtonIconView
            android:id="@+id/bt_search"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/view_header"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/dp_10"
            android:gravity="center"
            app:itb_bg="@color/blue"
            app:itb_bg_pressed="@color/blue_trans"
            app:itb_padding_left="@dimen/dp_50"
            app:itb_padding_right="@dimen/dp_50"
            app:itb_radius="3dp"
            app:itb_text="@string/title_search" />
    </LinearLayout>
</RelativeLayout>