<?xml version="1.0" encoding="utf-8"?>
<layout>
    <data>
        <variable
            name="presenter"
            type="com.viettel.mbccs.screen.kpp.order.ordersuccess.OrderSuccessPresenter"
            />
    </data>
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_table_title"
        android:orientation="horizontal"
        >

        <com.viettel.mbccs.widget.CustomTextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:padding="@dimen/dp_5"
            android:text="@string/mode_code1"
            android:textColor="@color/black"
            android:textSize="@dimen/sp_13"
            />
        <View
            style="@style/dividerVerticalStyle"
            />
        <com.viettel.mbccs.widget.CustomTextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:gravity="center"
            android:padding="@dimen/dp_5"
            android:text="@string/quantity"
            android:textColor="@color/black"
            android:textSize="@dimen/sp_13"
            />
        <View
            style="@style/dividerVerticalStyle"
            />
        <com.viettel.mbccs.widget.CustomTextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:padding="@dimen/dp_5"
            android:text="@string/sum_money"
            android:textColor="@color/black"
            android:textSize="@dimen/sp_13"
            />
    </LinearLayout>
</layout>